--- a/ModelLabs/NetworkModelService/DataModel/DataModel.csproj
+++ b/ModelLabs/NetworkModelService/DataModel/DataModel.csproj
@@ -95,6 +95,21 @@
     <Compile Include="Core\Location.cs" />
     <Compile Include="Core\IdentifiedObject.cs" />
     <Compile Include="Core\PowerSystemResource.cs" />
+    <Compile Include="Ja\BasicIntervalSchedule.cs" />
+    <Compile Include="Ja\Breaker.cs" />
+    <Compile Include="Ja\ConductingEquipment.cs" />
+    <Compile Include="Ja\DayType.cs" />
+    <Compile Include="Ja\Equipment.cs" />
+    <Compile Include="Ja\LoadBrakeSwitch.cs" />
+    <Compile Include="Ja\PowerSystemResource.cs" />
+    <Compile Include="Ja\ProtectedSwitch.cs" />
+    <Compile Include="Ja\Recloser.cs" />
+    <Compile Include="Ja\RegularIntervalSchedule.cs" />
+    <Compile Include="Ja\RegularTimePoint.cs" />
+    <Compile Include="Ja\Season.cs" />
+    <Compile Include="Ja\SeasonDayTypeSchedule.cs" />
+    <Compile Include="Ja\Switch.cs" />
+    <Compile Include="Ja\SwitchSchedule.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Wires\WindingTest.cs" />
     <Compile Include="Wires\PowerTransformer.cs" />
